--- a/playground.ipynb
+++ b/playground.ipynb
@@ -70,6 +70,31 @@
     "print(ord('b'))\n",
     "print(ord('z'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'push'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m arr \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 2\u001b[0m \u001b[43marr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpush\u001b[49m(\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      3\u001b[0m arr\u001b[38;5;241m.\u001b[39mpush(\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m      4\u001b[0m arr\u001b[38;5;241m.\u001b[39mpush(\u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'push'"
+     ]
+    }
+   ],
+   "source": [
+    "arr = []\n",
+    "arr.append(1)\n",
+    "arr.append(2)\n",
+    "arr.append(3)\n",
+    "print(arr)"
+   ]
   }
  ],
  "metadata": {
